objects/Backlog_User__c.object
<CustomObject>
    <fields>
        <fullName>ALM_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ALM User</label>
        <referenceTo>ALM_User__c</referenceTo>
        <relationshipLabel>Backlog Users</relationshipLabel>
        <relationshipName>Backlog_Users</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <label>Backlog Item</label>
        <referenceTo>Backlog__c</referenceTo>
        <relationshipLabel>Backlog Users</relationshipLabel>
        <relationshipName>Backlog_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Role of the team member</description>
        <label>Role</label>
        <referenceTo>ALM_User_Role__c</referenceTo>
        <relationshipLabel>Backlog Item Users</relationshipLabel>
        <relationshipName>Backlog_Item_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Backlog Item User</label>
    <nameField>
        <displayFormat>BU-{0000}</displayFormat>
        <label>Backlog Item User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Item Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>